fixed spacing error

--- a/style.css
+++ b/style.css
@@ -8,36 +8,46 @@
 
 * {
   scroll-behavior: smooth;
+  display: flex;
+  line-height: 1;
+  font-family: Arial, Helvetica, sans-serif;
+}
+title {
+  display: none;
+}
+html {
+  display: block;
 }
 script {
   display: none;
 }
 body {
-  display: flex;
   flex-direction: column;
   color: var(--text);
   background-color: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
   left: 0;
 }
 .headshot {
-  width: 40%;
-  height: 40%;
+  width: 60%;
+  height: 60%;
   margin: 6%;
-  border-radius: 1000px;
+}
+#headshot {
+  width: 100%;
+  height: 100%;
 }
 .column {
   flex-direction: column;
 }
 .row {
-  display: flex;
   flex-direction: row;
+  flex-wrap: nowrap;
 }
 #bio {
   margin-top: 10%;
-  margin-right: 15%;
+  margin-right: 5%;
   font-size: x-large;
 }
 #bio2 {
@@ -106,12 +116,14 @@ a {
   padding: 0.8%;
   padding-top: 1%;
   border: medium;
+  justify-content: center;
 }
 .CV_inner {
   background-color: inherit;
   color: inherit;
   text-decoration: none;
   padding: 0.8%;
+  text-align: center;
 }
 
 button:hover,
@@ -174,7 +186,7 @@ button:hover,
 }
 
 .space {
-  display: flex;
+  margin-top: 8%;
 }
 @media only screen and (max-width: 600px) {
   button {
@@ -203,5 +215,8 @@ button:hover,
   }
   .space {
     display: none;
+  }
+  .headshot {
+    width: 80%;
   }
 }
